[FEATURE] Add cachable searchbox. Thanks to Stephan Bauer. https://github.com/teaminmedias-pluswerk/ke_search/pull/430
[BUGFIX]  Fix toggling of indexed content in the backend module for TYPO3 11 by using Bootstrap 5 data attributes.

Version 4.1.0, October 2021
[!!!]     This version supports TYPO3 10 and 11 and drops support for TYPO3 9.
[TASK]    Remove support for TYPO3 9
[TASK]    Make extension installable with TYPO3 11
[TASK]    Switch from xml to xlf language files
[TASK]    Replace deprecated GeneralUtility::milliseconds() with native PHP function
[TASK]    Add check if static template is included
[TASK]    Adapt usage of filePathSanitizer to TYPO3 11
[TASK]    Use new namespace for PageRepository
[TASK]    Move commands registration from Commands.php to Services.yaml
[TASK]    Move dependency injection for AbstractBackendModuleController from inject annotation to constructor injection
[BUGFIX]  Fix syntax error with PHP 7.2 and 7.3. Thanks to Benjamin Franzke. https://github.com/tpwd/ke_search/pull/5
[TASK]    Remove usage of deprecated constant TYPO3_MODE, see https://docs.typo3.org/c/typo3/cms-core/master/en-us/Changelog/11.0/Deprecation-92947-DeprecateTYPO3_MODEAndTYPO3_REQUESTTYPEConstants.html
[BUGFIX]  Fix the check which action is currently set in the backend module, fixes error: Could not ultimately dispatch the request after 101 iterations
[TASK]    Show document header in backend module
[DOC]     Add documentation about MySQL stopwords. Thanks to Torben Hansen. https://github.com/tpwd/ke_search/issues/13

Version 4.0.1, October 2021
[TASK]    Use new ke_search_premium 4 namespace "tpwd"

Version 4.0.0, September 2021
[!!!]     This version changes the namespace for ke_search to "twpd". If you extend or use classes of ke_search, please make sure to use the new namespace in your code.
[TASK]    Move repository and issue tracker to https://github.com/tpwd/ke_search
[TASK]    Switch namespace to tpwd